[gd_scene load_steps=8 format=2]

[ext_resource path="res://script_player.gd" type="Script" id=1]
[ext_resource path="res://PixelSpaceRage/256px/PlayerBlue_Frame_01_png_processed.png" type="Texture" id=2]
[ext_resource path="res://PixelSpaceRage/128px/PlayerRed_Frame_01_png_processed.png" type="Texture" id=3]
[ext_resource path="res://game_over.jpg" type="Texture" id=4]

[sub_resource type="Animation" id=2]
resource_name = "explodindo"

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.0392157, 0.0392157, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 24.8114, 28.7204 )

[node name="Node2D" type="Node2D"]
position = Vector2( 272.837, 501.591 )
scale = Vector2( 1.5, 1.5 )

[node name="Game Over" type="Sprite" parent="."]
visible = false
position = Vector2( 207.083, -147.043 )
scale = Vector2( 1.81352, 1.10117 )
texture = ExtResource( 4 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
show_behind_parent = true
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="KinematicBody2D/Sprite"]
anims/explodindo = SubResource( 2 )
anims/recebendo_dano = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
shape = SubResource( 4 )

[node name="Position2D" type="Position2D" parent="KinematicBody2D"]
position = Vector2( -0.0908508, -53.2583 )

[node name="vida1" type="Sprite" parent="."]
position = Vector2( -158.975, -311.009 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="vida2" type="Sprite" parent="."]
position = Vector2( -128.175, -310.858 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="vida3" type="Sprite" parent="."]
position = Vector2( -96.7709, -311.009 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
